[tool.poetry]
name = "hexkfold"
version = "0.0.1"
description = ""
license = "MIT"
authors = ["Sergey Parshukov <syparshukov@gmail.com>"]
readme = "README.md"
repository = "https://github.com/suparshukov/hexkfold"
keywords = ["KFold", "cross-validator", "hexagon", "h3"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{include = "hexkfold"}]


[tool.poetry.dependencies]
python = "^3.9"
h3 = "^3.7.6"
numpy = "^1.24.3"


[tool.poetry.group.test.dependencies]
pytest = "*"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.4"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
